--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/logo.png" />
+  <link rel="icon" type="image/svg+xml" href="./logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Blog app</title>
   <!-- Google tag (gtag.js) -->
@@ -13,7 +13,7 @@
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
   
-    
+
     gtag('config', 'G-YJ48KVB2WZ');
   </script>
 </head>
