upload complete package after crud

--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
   <link rel="icon" type="image/svg+xml" href="./logo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Blog app</title>
+
+
+  <!-- <link
+  rel="stylesheet"
+  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  integrity="sha512-papNmG6Q9OIBZlZ69o+1Jc0Ly6YrKoN1YQxhJ8n9/N+B+RzH2dfjZbA13O/9HOkE6NJ+U0U5I9KcsasS3gk3iA=="
+  crossorigin="anonymous"
+  referrerpolicy="no-referrer"
+/> -->
+<!-- 
+
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+    integrity="sha512-papNmG6Q9OIBZlZ69o+1Jc0Ly6YrKoN1YQxhJ8n9/N+B+RzH2dfjZbA13O/9HOkE6NJ+U0U5I9KcsasS3gk3iA=="
+    crossorigin="anonymous"
+    referrerpolicy="no-referrer"
+  /> -->
   <!-- Google tag (gtag.js) -->
   <script async src="https://www.googletagmanager.com/gtag/js?id=G-YJ48KVB2WZ"></script>
   <script>
